More work on the colorGame files

--- a/colorGame.html
+++ b/colorGame.html
@@ -5,8 +5,15 @@
 </head>
 <body>
 	<h1>The Great <span id="correctColorDisplay">correctColorDisplay</span> Color Game</h1>
-	<div>
+	<div id="stripe">
 		<span id="message"></span>
+		<button id="resetButton">New Colors</button>
+//		<span>
+//			<button id="hardMode">Hard</button>
+//		</span>
+//		<span>
+//			<button id="easyMode">Easy</button>
+//		</span>
 	</div>
 	<div id="container">
 		<div class="square"></div>
