Add more features to colorGame

--- a/colorGame.html
+++ b/colorGame.html
@@ -9,10 +9,10 @@
 		<span id="message"></span>
 		<button id="resetButton">New Colors</button>
 //		<span>
-//			<button id="hardMode">Hard</button>
+//			<button id="hardModeButton">Hard</button>
 //		</span>
 //		<span>
-//			<button id="easyMode">Easy</button>
+//			<button id="easyModeButton">Easy</button>
 //		</span>
 	</div>
 	<div id="container">
