More updates to colorGame files

--- a/colorGame.html
+++ b/colorGame.html
@@ -4,16 +4,16 @@
 	<link rel="stylesheet" type="text/css" href="colorGame.css">
 </head>
 <body>
-	<h1>The Great <span id="correctColorDisplay">correctColorDisplay</span> Color Game</h1>
+	<h1>The Great 
+		<br>
+		<span id="correctColorDisplay">correctColorDisplay</span> 
+		<br>
+		Color Game</h1>
 	<div id="stripe">
 		<span id="message"></span>
 		<button id="resetButton">New Colors</button>
-//		<span>
-//			<button id="hardModeButton">Hard</button>
-//		</span>
-//		<span>
-//			<button id="easyModeButton">Easy</button>
-//		</span>
+		<button id="hardModeButton">Hard</button>
+		<button id="easyModeButton">Easy</button>
 	</div>
 	<div id="container">
 		<div class="square"></div>
