--- a/ToDoListProject/index.html
+++ b/ToDoListProject/index.html
@@ -2,16 +2,18 @@
 <head>
 	<title>To-Do List</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/todos.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script type="text/javascript" src="assets/js/lib/jquery-3.2.1.min.js"></script>
 </head>
 <body>
 	<div id="container">
-		<h1>To-Do List</h1>
-		<input type="text">
+		<h1>To-Do List <i class="fa fa-plus"></i></h1>
+		<input type="text" placeholder="Add New ToDo">
 		<ul>
-			<li><span> X </span>One</li>
-			<li><span> X </span>Two</li>
-			<li><span> X </span>Three</li>
+			<li><span><i class="fa fa-trash"></i></span>One</li>
+			<li><span><i class="fa fa-trash"></i></span>Two</li>
+			<li><span><i class="fa fa-trash"></i></span>Three</li>
 		</ul>
 	</div>
 	<script type="text/javascript" src="assets/js/todos.js"></script>
